bug not showing homepage image fixed and css added

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,6 +6,7 @@ html {
 
 body {
     background: url('/media/buys_for_guys_main_image.jpg') no-repeat center center-fixed;
+    background-image: url('/media/buys_for_guys_main_image.jpg') ;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #3B3738;
@@ -56,3 +57,27 @@ body {
 .border-black {
     border: 1px solid black !important;
 }
+
+/* --------------------------------- Media queries */
+
+/* Slightly larger container on xl screens */
+@media (min-width: 1200px) {
+    .container {
+      max-width: 80%;
+    }
+  }
+  
+  /* fixed top navbar only on medium and up */
+  @media (min-width: 992px) {
+      .fixed-top-desktop-only {
+          position: fixed;
+          top: 0;
+          right: 0;
+          left: 0;
+          z-index: 1030;
+      }
+  
+      .header-container {
+          padding-top: 164px;
+      }
+  }
